"1.3 QA [System] UI: forget pwd confirmation popup box alignment issue Fixed"

--- a/src/main/java/org/ednovo/gooru/client/mvp/home/res_loginpopup3.css
+++ b/src/main/java/org/ednovo/gooru/client/mvp/home/res_loginpopup3.css
@@ -282,7 +282,7 @@
 .emailSignIn{}
 .forgotPwdMargin{}
 .form_control{}
-
+.PopupMainResetSucessStyle{}
  
 
 
